# Software-Development-Kit

./: CMakeLists.txt  README.md
Plugins/ExamplePlugin/: CMakeLists.txt  ExamplePlugin.cpp
